dataset1235/2025-2/805158916/users/2004009724/executions/2118643220_1245234979.log
== SUBMISSION (2025-09-01 15:01:04)
-- CODE: 
PSR = float(input("Peso do saco de racao em gramas"))
QPD = float(input("Quantidade diaria de racao em gramas"))

QQR = PSR - (5*QPD)

print(round(QQR, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas171.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas1899.78
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas159.4
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas1064.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas385.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas899.78
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:53:31)
-- CODE: 
psr = float(input("Digite o peso do saco de racao em gramas"))
qpd = float(input("Digite a quantidade diaria de racao em gramas"))

qqr = psr - qpd * 4

print(round(qqr, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas191.7
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1919.89
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas176.39
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1076.64
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas414.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas919.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:53:20)
-- CODE: 
psr = float(input("Digite o peso do saco de racao em gramas"))
qpd = float(input("Digite a quantidade diaria de racao em gramas"))

qqr = psr - qpd * 4

print(round(qqr, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas191.7
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1919.8933
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas176.39
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1076.64
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas414.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas919.8933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:54:06)
-- CODE: 
psr = float(input("Digite o peso do saco de racao em gramas"))
qpd = float(input("Digite a quantidade diaria de racao em gramas"))

qqr = psr - (4*qpd)

print(round(qqr, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas191.7
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1919.89
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas176.39
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1076.64
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas414.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas919.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:34:13)
-- CODE: 
peso = float(input("Digite o peso do saco de racao em gramas"))
quantidade = float(input("Digite a quantidade diaria de racao em gramas"))
valor = peso - (quantidade * 4)
print("A quantidade de racao em gramas que restara no saco apos 5 dias")
print(round(5 , 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
5
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
5
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
5
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
5
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:52:22)
-- CODE: 
psr = float(input("Digite o peso do saco de racao em gramas"))
qpd = float(input("Digite a quantidade diaria de racao em gramas"))

qqr = psr - qpd * 4

print(round(qqr, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas191.7
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1919.8933
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas176.39
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1076.64
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas414.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas919.8933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:16:22)
-- CODE: 
peso = float(input("Digite o peso do saco de racao em gramas"))
quantidade = float(input("Digite a quantidade diaria de racao em gramas"))
valor = peso - (quantidade * 4)
print("A quantidade de racao em gramas que restara no saco apos 5 dias")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:54:05)
-- CODE: 
psr = float(input("Digite o peso do saco de racao em gramas"))
qpd = float(input("Digite a quantidade diaria de racao em gramas"))

qqr = psr - (4*qpd)

print(round(qqr, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas191.7
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1919.89
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas176.39
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1076.64
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas414.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas919.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:17:10)
-- CODE: 
peso = float(input("Digite o peso do saco de racao em gramas"))
quantidade = float(input("Digite a quantidade diaria de racao em gramas"))
valor = peso - (quantidade * 4)
print("A quantidade de racao em gramas que restara no saco apos 5 dias")
round(4,5)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:17:10)
-- CODE: 
peso = float(input("Digite o peso do saco de racao em gramas"))
quantidade = float(input("Digite a quantidade diaria de racao em gramas"))
valor = peso - (quantidade * 4)
print("A quantidade de racao em gramas que restara no saco apos 5 dias")
round(4,5)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:34:14)
-- CODE: 
peso = float(input("Digite o peso do saco de racao em gramas"))
quantidade = float(input("Digite a quantidade diaria de racao em gramas"))
valor = peso - (quantidade * 4)
print("A quantidade de racao em gramas que restara no saco apos 5 dias")
print(round(5 , 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
5
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
5
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
5
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
5
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:01:03)
-- CODE: 
PSR = float(input("Peso do saco de racao em gramas"))
QPD = float(input("Quantidade diaria de racao em gramas"))

QQR = PSR - (5*QPD)

print(round(QQR, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas171.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas1899.78
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas159.4
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas1064.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas385.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas899.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:56:25)
-- CODE: 
PSR = float(input("Peso do saco de racao em gramas"))
QPD = float(input("Quantidade diaria de racao em gramas"))

QQR = PSR - (4*QPD)

print(round(QQR, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas191.7
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas1919.89
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas176.39
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas1076.64
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas414.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas919.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:54:03)
-- CODE: 
psr = float(input("Digite o peso do saco de racao em gramas"))
qpd = float(input("Digite a quantidade diaria de racao em gramas"))

qqr = psr - (4*qpd)

print(round(qqr, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas191.7
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1919.89
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas176.39
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1076.64
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas414.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas919.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:53:31)
-- CODE: 
psr = float(input("Digite o peso do saco de racao em gramas"))
qpd = float(input("Digite a quantidade diaria de racao em gramas"))

qqr = psr - qpd * 4

print(round(qqr, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas191.7
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1919.89
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas176.39
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1076.64
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas414.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas919.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:16:25)
-- CODE: 
peso = float(input("Digite o peso do saco de racao em gramas"))
quantidade = float(input("Digite a quantidade diaria de racao em gramas"))
valor = peso - (quantidade * 4)
print("A quantidade de racao em gramas que restara no saco apos 5 dias")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramasA quantidade de racao em gramas que restara no saco apos 5 dias
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:52:23)
-- CODE: 
psr = float(input("Digite o peso do saco de racao em gramas"))
qpd = float(input("Digite a quantidade diaria de racao em gramas"))

qqr = psr - qpd * 4

print(round(qqr, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas191.7
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1919.8933
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas176.39
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas1076.64
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas414.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Digite o peso do saco de racao em gramasDigite a quantidade diaria de racao em gramas919.8933
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:33:17)
-- CODE: 
peso = float(input("Digite o peso do saco de racao em gramas"))
quantidade = float(input("Digite a quantidade diaria de racao em gramas"))
valor = peso - (quantidade * 4)
print("A quantidade de racao em gramas que restara no saco apos 5 dias")
rou
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    rou
NameError: name 'rou' is not defined
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    rou
NameError: name 'rou' is not defined
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    rou
NameError: name 'rou' is not defined
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    rou
NameError: name 'rou' is not defined
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    rou
NameError: name 'rou' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    rou
NameError: name 'rou' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:56:24)
-- CODE: 
PSR = float(input("Peso do saco de racao em gramas"))
QPD = float(input("Quantidade diaria de racao em gramas"))

QQR = PSR - (4*QPD)

print(round(QQR, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas191.7
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas1919.89
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas176.39
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas1076.64
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas414.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
Peso do saco de racao em gramasQuantidade diaria de racao em gramas919.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
